--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.2.0",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@react-google-maps/api": "^2.19.2",
     "@types/node": "20.5.1",
@@ -18,6 +17,8 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.2.0",
+    "firebaseui": "^6.1.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
