--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
