--- a/package.json
+++ b/package.json
@@ -1,38 +1,33 @@
 {
-  "name": "broke-bites",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.2",
-    "@headlessui/react": "^1.7.17",
-    "@headlessui/vue": "^1.7.16",
-    "@heroicons/react": "^2.0.18",
-    "@heroicons/vue": "^2.0.18",
-    "@react-google-maps/api": "^2.19.2",
-    "@types/node": "20.5.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "firebase": "^10.2.0",
-    "firebaseui": "^6.1.0",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-slider": "^2.0.6",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
-    "@types/react-slider": "^1.3.1",
-    "postcss-nesting": "^12.0.1",
-    "tailwindcss": "^3.3.3"
-  }
+    "name": "broke-bites",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@googlemaps/js-api-loader": "^1.16.2",
+        "@headlessui/react": "^1.7.17",
+        "@headlessui/vue": "^1.7.16",
+        "@heroicons/react": "^2.0.18",
+        "@heroicons/vue": "^2.0.18",
+        "@react-google-maps/api": "^2.19.2",
+        "autoprefixer": "10.4.15",
+        "eslint": "8.47.0",
+        "eslint-config-next": "13.4.19",
+        "firebase": "^10.2.0",
+        "firebaseui": "^6.1.0",
+        "next": "13.4.19",
+        "postcss": "8.4.28",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-slider": "^2.0.6"
+    },
+    "devDependencies": {
+        "postcss-nesting": "^12.0.1",
+        "tailwindcss": "^3.3.3"
+    }
 }
