--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.1.1",
+        "react-share": "^4.4.1",
         "react-slider": "^2.0.6",
         "tailwindcss": "3.3.3"
     },
