--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "eslint-config-next": "13.4.19",
         "firebase": "^10.2.0",
         "firebaseui": "^6.1.0",
-        "next": "13.4.19",
+        "next": "^13.5.4",
         "postcss": "8.4.28",
         "react": "18.2.0",
+        "react-chatbot-kit": "^2.1.2",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.1.1",
         "react-share": "^4.4.1",
+        "react-simple-chatbot": "^0.6.1",
         "react-slider": "^2.0.6",
         "tailwindcss": "3.3.3"
     },
