--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "tailwindcss": "3.3.3"
     },
     "devDependencies": {
-        "postcss-nesting": "^12.0.1"
+        "postcss-nesting": "^12.0.1",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.5"
     }
 }
