--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.1.1",
+        "react-router-dom": "^6.16.0",
         "react-share": "^4.4.1",
         "react-slider": "^2.0.6",
         "tailwindcss": "3.3.3"
