--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "@stripe/stripe-js": "^2.1.7",
         "autoprefixer": "10.4.15",
         "axios": "^1.5.1",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "eslint": "8.47.0",
         "eslint-config-next": "13.4.19",
+        "express": "^4.18.2",
         "firebase": "^10.2.0",
         "firebaseui": "^6.1.0",
         "next": "13.4.19",
@@ -26,6 +30,7 @@
         "react-router-dom": "^6.16.0",
         "react-share": "^4.4.1",
         "react-slider": "^2.0.6",
+        "stripe": "^13.10.0",
         "tailwindcss": "3.3.3"
     },
     "devDependencies": {
