--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.0.2",
         "@react-google-maps/api": "^2.19.2",
         "autoprefixer": "10.4.15",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.0.0",
         "eslint": "8.47.0",
         "eslint-config-next": "13.4.19",
         "firebase": "^10.2.0",
         "firebaseui": "^6.1.0",
+        "lucide-react": "^0.288.0",
         "next": "13.4.19",
         "postcss": "8.4.28",
         "react": "18.2.0",
@@ -23,7 +27,9 @@
         "react-firebase-hooks": "^5.1.1",
         "react-share": "^4.4.1",
         "react-slider": "^2.0.6",
-        "tailwindcss": "3.3.3"
+        "tailwind-merge": "^1.14.0",
+        "tailwindcss": "3.3.3",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.1.4",
