--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "firebaseui": "^6.1.0",
         "lucide-react": "^0.288.0",
         "next": "13.4.19",
+        "next-themes": "^0.2.1",
         "postcss": "8.4.28",
         "react": "18.2.0",
         "react-dom": "18.2.0",
