--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@react-google-maps/api": "^2.19.2",
         "autoprefixer": "10.4.15",
