--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tabs": "^1.0.4",
         "@react-google-maps/api": "^2.19.2",
         "autoprefixer": "10.4.15",
         "class-variance-authority": "^0.7.0",
