--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-tabs": "^1.0.4",
+        "@radix-ui/react-toast": "^1.1.5",
         "@react-google-maps/api": "^2.19.2",
         "autoprefixer": "10.4.15",
         "class-variance-authority": "^0.7.0",
