--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-simple-chatbot": "^0.6.1",
         "react-slider": "^2.0.6",
         "stripe": "^13.11.0",
+        "styled-components": "^6.1.0",
         "tailwind-merge": "^1.14.0",
         "tailwindcss": "3.3.3",
         "tailwindcss-animate": "^1.0.7"
