--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
         "eslint-config-next": "13.4.19",
         "firebase": "^10.2.0",
         "lucide-react": "^0.288.0",
-        "next": "13.4.19",
+        "next": "^13.5.6",
         "next-themes": "^0.2.1",
+        "npm-install-missing": "^0.1.4",
         "postcss": "8.4.28",
         "react": "18.2.0",
         "react-chatbot-kit": "^2.1.2",
@@ -35,7 +36,7 @@
         "react-firebase-hooks": "^5.1.1",
         "react-router-dom": "^6.16.0",
         "react-share": "^4.4.1",
-        "react-simple-chatbot": "^0.6.1",
+        "react-simple-chatbot": "^0.5.0",
         "react-slider": "^2.0.6",
         "stripe": "^13.11.0",
         "styled-components": "^6.1.0",
